Revert "[SAU-846] fix reconstruction data pdf icon alignment"
This reverts commit 68b30497210a9bdd80d07f2bb18d4f72e371c69d.

--- a/app/styles/region-detail.scss
+++ b/app/styles/region-detail.scss
@@ -200,10 +200,6 @@
     h3.values-by {
         margin-top: 35px;
     }
-
-    i.rec-doc {
-      margin-left: 16px;
-    }
   }
 
   .biodiversity {
